Changes in the index.html and added a class eye-Catch and given the style in style.css

--- a/style.css
+++ b/style.css
@@ -2692,4 +2692,10 @@ body {
       .item .social-share a:hover {
         color: #fd5927; }
 
+
+
 /*# sourceMappingURL=style.css.map */
+/*# Own styles */
+.eye-Catch {
+        font-family: 'Lobster', cursive;
+}
