--- a/style.css
+++ b/style.css
@@ -2695,6 +2695,23 @@ body {
 
 
 .bookadvertisement{
+  background-image: url(images/Advertise1.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  background-position: top;
+  background-size: 100% 100%;
+  margin-right: 10%;
+  border: 1px solid black;
   width: 100%;
-  height: 400px;
+  height: 720px;
+}
+
+.logo{
+  height: 100%;
+  width: 100%;
+  max-height: 100px;
+  max-width: 150px;
+  min-width: 100px;
+  min-height: 90px;
 }
