--- a/style.css
+++ b/style.css
@@ -2706,6 +2706,33 @@ body {
   width: 100%;
   height: 720px;
 }
+@media screen and (max-width: 320px) {
+  .bookadvertisement{
+    height: 180px;
+  }
+}
+@media screen and (min-width: 321px) and (max-width: 480px) {
+     .bookadvertisement {
+         height : 270px;
+     }
+}
+@media screen and (min-width: 481px) and (max-width: 640px) {
+     .bookadvertisement {
+         height : 360px;
+     }
+}
+
+@media screen and (min-width: 641px) and (max-width: 768px) {
+     .bookadvertisement {
+         height : 432px;
+     }
+}
+
+@media screen and (min-width: 769px) and (max-width:1000px) {
+     .bookadvertisement {
+         height : 562px;
+     }
+}
 
 .logo{
   height: 100%;
