--- a/gallerycss/style.css
+++ b/gallerycss/style.css
@@ -102,7 +102,7 @@ body {
 .team-head{
   color: white;
   text-align: center;
-  font-size: 65px;
+  font-size: 6vw;
   font-weight: 600;
   line-height: 2;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
@@ -111,13 +111,14 @@ body {
   -ms-transform: scale(1.3);
   transform: scale(1.3);
   opacity: 100;
+  word-wrap: break-word;
   
 }
 
 .team-subhead{
   color: white;
   text-align: center;
-  font-size: 30px;
+  font-size: 3.8vw;
   font-weight: 300;
   line-height: 1.5;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
